2006-08-12    <elf@scarlet.buici.com>

	* Makefile (SUBLEVEL): v1.4.3

	* src/drivers/drv-fis.c: Added skip descriptor handling.  This
	means that partitions may include 'skips' where some data
	physically located in the partition is ignored when performing IO
	on the partition.  This feature was added for the slug with a dumb
	version of Redboot that ignores the partition table when looking
	for the data it must copy to SDRAM.
 
	* src/apex/cmd-fill.c (cmd_fill): Removed unwanted printf.

	* src/lib/sort.c (sort): Check for degenerate cases of sorting 0
	or 1 element.

	* debian/*: Fixed the control file and and changelog to properly
	reflect this release.

2006-07-30  Marc Singer  <elf@buici.com>

	* Makefile (SUBLEVEL): Rolling revision in preparation for release
	of the BSP. apex-1.4.2

	* src/mach-lh7952x/env.c: Moved all lh7952x's to use the
	amba-pl011 serial driver in the kernel.

2006-07-29  Marc Singer  <elf@buici.com>

	* src/drivers-lh/drv-clcdc.c (clcdc_release): Revised the order of
	the clcdc driver release so it works on the lh79520 which will
	disable the controller clock.

	* src/drivers/drv-cf.c (ready_wait): Recoded ready_wait to use the
	attribute pin replacement register.  This doesn't really have an
	impact on performance, but it does require that the driver is
	properly configured in the drv_cf.h header.

2006-07-27  Marc Singer  <elf@buici.com>

	* src/drivers/drv-cf.c (cf_identify): Fixed attribute reading for
	some cards that return the value in the high and low bytes.
	Attribute memory is really only byte addressable.  This fixes a
	problem with recognizing some brands of CF cards.

2006-07-25  Marc Singer  <elf@buici.com>

	* usr/printenv.cc: Rewritten printenv program to support the new
	environment memory format.
 
	* README_environment: New README about the environment.

	* Makefile: Removed envmagic.h and it's computation.  The new
	environment is free-standing and removal of envmagic makes the
	build much quicker.
 